# physics

./: .editorconfig  .gitignore  .pre-commit-config.yaml  M7B_README.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yaml
M1_report/: preamble.tex
M1_report/models/: frontal_resistance.tex  models.tex
M2_report/: conclusion.tex  intro.tex  main.tex  numerical_methods.tex  preamble.tex  results.tex  title.tex
M2_report/models/: conservation_laws.tex  hook_force.tex  models.tex
M4_Report/: conclusion.tex  intro.tex  numerical_methods.tex  preamble.tex  title.tex
M4_Report/models/: conservation_laws.tex  models.tex  rolling_down_incline.tex  rolling_on_horizontal.tex
M5_report/: conclusion.tex  intro.tex  numerical_methods.tex  preamble.tex  title.tex
M5_report/models/: damped_pendulum.tex  energy_conservation.tex  ideal_pendulum.tex  models.tex
M7B_report/: conclusion.tex  intro.tex  main.tex  numerical_methods.tex  preamble.tex  title.tex
M7B_report/models/: barometric_formula.tex  boltzmann_distribution.tex  ideal_gas_dynamics.tex  maxwell_distribution.tex  models.tex
src/: main.py
src/models/billiard/: __init__.py  charts.py  config.py  objects.py  sidebar.py  utils.py
src/models/ideal_gas/: __init__.py  charts.py  config.py  objects.py  utils.py
src/models/pendulum/: __init__.py  charts.py  config.py  objects.py  sidebar.py  utils.py
src/models/rolling_ball/: __init__.py  advanced_charts.py  charts.py  config.py  objects.py  sidebar.py  utils.py
src/models/stone_flight/: __init__.py  charts.py  config.py  objects.py  sidebar.py  utils.py
tests/: conftest.py
tests/m1/: test_trajectory_calculation.py
tests/m2/: test_billiard_simulation.py
tests/m4/: test_ball_physics.py
tests/m5/: test_pendulum_physics.py
tests/m7b/: __init__.py  conftest.py  test_simulation.py
tex/: conclusion.tex  intro.tex  numerical_methods.tex  results.tex
tex/models/: perfect.tex  viscous_friction.tex
tex_M1/: title.tex
tex_M2/models/: billiard_game.tex
