[project]
name = "physics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "altair>=5.5.0",
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "scipy>=1.16.2",
  "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
  "mypy>=1.18.1",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "ruff>=0.13.0",
  "scipy-stubs>=1.16.2.0",
]

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
preview = true
fix = true
line-length = 80
respect-gitignore = true

src = ["src", "tests"]

target-version = "py312"

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "DTZ", # flake8-datetimez
  "E", # pycodestyle
  "ERA", # flake8-eradicate
  "EXE", # flake8-executable
  "F", # pyflakes
  "FBT", # flake8-boolean-trap
  "FLY", # pyflint
  "FURB", # refurb
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "PERF", # perflint
  "PIE", # flake8-pie
  "PL", # pylint
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # ruff
  "S", # flake8-bandit
  "SIM", # flake8-simpify
  "SLF", # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  "A005", # allow to shadow stdlib and builtin module names
  "COM812", # trailing comma, conflicts with `ruff format`
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "D419",
  "ISC001", # implicit string concat conflicts with `ruff format`
  "ISC003", # prefer explicit string concat over implicit concat
  "TRY003", # long exception messages from `tryceratops`
  "RUF001",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

# https://mypy.readthedocs.io/en/latest/config_file.html
[tool.mypy]
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
  "deprecated",
]

# http://doc.pytest.org/en/latest/customize.html
[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = ["error"]

addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
    # Output:
  "--tb=short",
  # Ignores:
  "--ignore=docs",
]
